[gd_scene load_steps=3 format=3 uid="uid://yqmcclkgiany"]

[ext_resource type="Script" path="res://Scripts/Death screen.gd" id="1_8o4c0"]
[ext_resource type="AudioStream" uid="uid://de7itrxyq16ka" path="res://Audio/pixel-death-66829.mp3" id="2_1xpeq"]

[node name="Death screen" type="Node2D"]
script = ExtResource("1_8o4c0")

[node name="respawn" type="Button" parent="."]
offset_left = 385.0
offset_top = 170.0
offset_right = 819.0
offset_bottom = 328.0
text = "Respawn"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 555.0
offset_top = 41.0
offset_right = 642.0
offset_bottom = 94.0
text = "You died"
tab_size = 5

[node name="go to menu" type="Button" parent="."]
offset_left = 390.0
offset_top = 345.0
offset_right = 826.0
offset_bottom = 514.0
text = "Menu"

[node name="Death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1xpeq")
autoplay = true

[connection signal="pressed" from="respawn" to="." method="_on_button_pressed"]
[connection signal="pressed" from="go to menu" to="." method="_on_go_to_menu_pressed"]
